IT Manager/force-app/main/default/objects/IT_Support_Ticket__c/IT_Support_Ticket__c.object-meta.xml
<CustomObject>
    <label>IT Support Ticket</label>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>IT Support Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Support Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>