IT Manager/force-app/main/default/objects/IT_Support_Ticket__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the issue you need the user needs help with.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>