IT Manager/force-app/main/default/objects/IT_Support_Ticket__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person requesting support</description>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IT_Support_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>